<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/runtime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/runtime"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/walktime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/walktime"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/countdown"
        style="@style/Countdown"
        android:layout_weight="1"
        android:text="@string/zero" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="startTimer"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="stopTimer"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/startedAt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/started_at"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/numberOfLaps"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/number_laps"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>